force-app/src/objects/TR1__Off_Limit_Policy_Definition__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Active_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the definition is active or not</description>
        <inlineHelpText>Indicates if the definition is active or not</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Behavior_Type__c</fullName>
        <description>The default value of the Off Limit Policy Behavior Type.</description>
        <inlineHelpText>The default value of the Off Limit Policy Behavior Type.</inlineHelpText>
        <label>Default Behavior Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                    <default>true</default>
                    <label>Warning</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Default_Rank_On_Block_Type__c</fullName>
        <description>Default Rank Value if Policy Behavior Type = Block.</description>
        <inlineHelpText>Default Rank Value if Policy Behavior Type = Block.</inlineHelpText>
        <label>Default Rank On Block Type</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Rank_On_Warn_Type__c</fullName>
        <description>Default Rank Value if Policy Behavior Type = Warning.</description>
        <inlineHelpText>Default Rank Value if Policy Behavior Type = Warning.</inlineHelpText>
        <label>Default Rank On Warn Type</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Execution_Order_Field__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Execution_Order__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Implementing_Class_Field__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Implementing_Class__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Object_Field__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Job_Role__c</fullName>
                </value>
                <value>
                    <fullName>Job__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Object__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Job_Role__c</fullName>
                </value>
                <value>
                    <fullName>Job__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__System_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <label>Off Limit Policy Definition</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>TR1__Default_Behavior_Type__c</columns>
        <columns>TR1__Default_Rank_On_Block_Type__c</columns>
        <columns>TR1__Default_Rank_On_Warn_Type__c</columns>
        <columns>TR1__Active_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Off Limit Policy Definitions</pluralLabel>
    <validationRules>
        <fullName>TR1__Default_Rank_On_Block_Type_Rule</fullName>
        <active>true</active>
        <description>The default Rank value should be positive Integer number.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(TR1__Default_Rank_On_Block_Type__c)),
TR1__Default_Rank_On_Block_Type__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>TR1__Default_Rank_On_Block_Type__c</errorDisplayField>
        <errorMessage>The default Rank value should be positive Integer number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Default_Rank_On_Warn_Type_Rule</fullName>
        <active>true</active>
        <description>The default Rank value should be positive Integer number.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(TR1__Default_Rank_On_Warn_Type__c)),
TR1__Default_Rank_On_Warn_Type__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>TR1__Default_Rank_On_Warn_Type__c</errorDisplayField>
        <errorMessage>The default Rank value should be positive Integer number.</errorMessage>
    </validationRules>
</CustomObject>